# awen01studio

./: .gitignore  agents.md  prd.md  tasks.md
ai-studio/: .env.template  README.md  pyproject.toml
ai-studio/backend/: __init__.py  bootstrap.py
ai-studio/core/: __init__.py  adapter_loader.py  api_server.py  base_adapter.py  crypto_vault.py  embedder.py  model_registry.py  session_manager.py  settings_loader.py  vector_db.py
ai-studio/gui/: APPguiMAIN-electron.py  __init__.py
ai-studio/gui/templates/: chat.html  knowledge.html  memory.html  tweak.html
ai-studio/imggen/: IMGGENfluxkontext-class.py  __init__.py  test_model.py
ai-studio/llm/: LLMdeepseekr1distillqwen7b-class.py  LLMtinyllama-class.py  __init__.py  test_model.py
ai-studio/scripts/: download_models.py  reindex_knowledge.py  reprocess_knowledge.py
ai-studio/stt/: STTwhisper-class.py  __init__.py
ai-studio/tests/: __init__.py  test_api_endpoints.py  test_crypto_vault.py  test_session_manager.py
ai-studio/tts/: TTSkokoro-class.py  __init__.py  test_model.py
ai-studio/utils/: __init__.py  file_utils.py  knowledge_search.py  logger_util.py  ocr_util.py
ai-studio/vision/: VISIONernievil-class.py  __init__.py  test_model.py
